--- a/_posts/2024-08-08-BUG-RAG权限排查.md
+++ b/_posts/2024-08-08-BUG-RAG权限排查.md
@@ -8,21 +8,69 @@ catalog:	true
 tags:
     - BUG
     - 权限
+typora-copy-images-to: ../img
 ---
 
 
 
 # 问题现象
 
-# 排查分析
+做的是一个类似字节`COZE`的产品，此次出现问题的模块是`RAG`模块的知识库权限部分，花费四个小时排查和解决
 
-## 业务背景
+1. 用户可以使用到自己没有被授权的知识库和文档
+2. 应用在提测环境是正常的，上线之后回归测试出现了问题
+
+# 排查分析
 
 ## 项目结构
 
+![image-20240808上午90609708](../img/image-20240808上午90609708.png)
+
+涉及到的业务模块主要是三个
+
+1. `consule`：承接所有`web`的请求，需要大模型的请求转发到`engine`
+2. `engine`：较为核心的模块，用户权限在此部分进行开发
+3. `LLM`：外部提供的大模型问答服务
+
+
+
+开发流程 ***重要:坑就是在这里***
+
+1. 项目团队分为两拨人，公有云团队主要做`ToC`和私有云团队做`ToB`
+   1. 两个方向都有的需求，公有云团队开发，私有云团队合入代码后复用
+   2. 私有云团队独有的功能，自己开发
+2. 公有云团队先开发，私有云团队按月`merge`公有云团队的代码，合并进新的功能
+
 ## 排查步骤
 
-## 问题修复
+1. 既然问题是出在了权限，权限部分在`engine`模块，第一感觉是`engine`模块出现了问题，使用测试环境镜像替换掉预上线的镜像，没有效果
+2. 需要定位到具体模块：查看上线日志，只有两个模块进行了更新，`consule` 和 `engine`，替换掉`consule` 环境的镜像，问题被修复了，此时可以确定问题是出现在了`consule`模块
+3. 对比了自己和负责权限开发的同事修改过的几个文件，两个环境没有差别，说明不是新需求开发引起的问题
+4. 排查问答模块的调用链路，最终是在`engine`模块调用了大模型服务，传入了知识库和文档的`id`列表
+   1. 此模块查询有权限的知识库和文档，以`user_id`作为查询条件，用`dev`账号登录，日志得到的`user_id`是`admin`用户
+   2. 继续向上排查，查看`consule`模块的调用，因为两个都是`flask`服务，本地用最新的代码起调试任务
+   3. `consule`模块在请求入口处 和 请求`engine`模块之前 分别查看`user_id`，发现两个值是不一样的
+   4. 肯定是链路中有函数修改了`user_id`，逐步调试，发现一个函数修改了`user_id`，注释掉此模块代码，重新发版，问题解决
 
 # 总结复盘
 
+## 问题原因
+
+看公/私有云的权限差异：公有云只有个人账户，不涉及到组织架构、授权等操作
+
+<img src="../img/image-20240808上午94429088.png" alt="image-20240808上午94429088" style="zoom: 50%;" />
+
+一次简单的使用流程
+
+1. A用户创建了一个`RAG`的应用，关联了一些知识库，当应用被发布到广场之后，对全部用户可见
+2. 此时会有一个问题，A用户的应用关联的知识库是自己私有的，其他用户看不到，会导致其他用户不可使用
+3. 为了解决上一个步骤的问题，公有云和私有云有不同的方案
+   1. 公有云只有个人账户的概念：(后续均为猜测) 默认用户发布应用，也会将文档权限一起公开，如何让用户B拥有用户A文档的权限
+      1. 文档和用户从`n->1`变为`n->n`，太复杂了，涉及到数据库表结构改动，放弃
+      2. 直接将`A.user_id`赋值给`B.user_id`，在后续使用中，B就是A
+   2. 私有云设计之初就有资源授权的功能，可以通过授权表，为用户增加资源权限
+
+## 排查复盘
+
+1. 对应用没有全局了解，只知道自己负责的那一小部分，梳理问答调用链路花费了很长时间
+2. 对合并进来的代码没有细看，只解决了冲突部分
