--- a/_posts/2024-08-08-BUG-RAG权限排查.md
+++ b/_posts/2024-08-08-BUG-RAG权限排查.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      一次权限BUG排查
-subtitle:   BUG排查
+title:      应用权限问题排查
+subtitle:   权限问题
 date:       2024-08-08
 author:     toan
 catalog:	true
