--- a/_posts/2024-08-09-BUG-K8S集群网络不通.md
+++ b/_posts/2024-08-09-BUG-K8S集群网络不通.md
@@ -19,7 +19,7 @@ tags:
 
 ## HTTP请求流程
 
-<img src="https://s5.51cto.com/oss/202401/02/323841f349148de522e315e857491ce27adbca.png" alt="img" style="zoom:50%;" />
+<img src="https://s2.loli.net/2024/08/09/RDyfVj8rNZzWSeb.png" alt="img" style="zoom:50%;" />
 
 1. `ingress`：配置转发，精确匹配 -> 前缀匹配
 2. `service`：根据`selector`匹配`label`标签将请求转发到`pod`
