--- a/_posts/2024-08-09-BUG-K8S集群网络不通.md
+++ b/_posts/2024-08-09-BUG-K8S集群网络不通.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      集群网络问题排查
+title:      集群网络学习
 subtitle:   网络
 date:       2024-08-09
 author:     toan
@@ -9,13 +9,6 @@ tags:
     - K8S
     - 网络
 ---
-
-# 问题现象
-
-1. 同一个机器上的`pod`可以正常通信
-2. 调度到不同机器上的`pod`无法正常通信
-
-# 问题排查
 
 ## HTTP请求流程
 
@@ -39,7 +32,7 @@ tags:
 #### `ensx`
 
 - 现代版本
-- `en`代表以太网，`s`代表插槽，`x`	标识符
+- `en`代表以太网，`s`代表插槽，`x`代表标识符
 - 解决上一个的缺点，保证网络接口名称在系统重启或硬件更改后保持一致
 
 ## Flannel网络插件
@@ -59,6 +52,11 @@ tags:
     * `ip addr`：可以在宿主机和`pod`内，查看虚拟网卡的信息  `this_number: 网卡@other_number`
     * `brctl show`：查看网桥信息
     * `route`：查看路由表
+* `CNI`插件简单分类
+  * `Overlay`：工作在真实网络之上的逻辑网络，需要封包再拆包
+  * `Route`：使用系统内置的路由功能来实现跨主机通信，依赖低层网络支持，没有封包和拆包
+  * `Ubderlay`：直接用底层网络
+
 
 ![image-20240610下午95328299](https://s2.loli.net/2024/08/09/vSCfsueLoznWxg6.png)
 
@@ -66,7 +64,7 @@ tags:
 * `10.10.1.0`：集群内跨主机通信，需要通过`flannel.1`插件
 * `102.168.10.0`：直接访问另一台机器`ip`，需要使用物理网卡
 
-### 后端配置
+### Flannel后端配置
 
 * `vxlan`：使用隧道封装报文，使用`overlay`模型支持跨结点通信
 * `host-way`：类似于`vxlan`直接路由模式，不支持跨二层网络节点
@@ -87,6 +85,13 @@ outer_src_mac: A.ens33.mac; outer_dst_mac: B.ens33.mac
 ```
 
 5. B接受到信息后，进行拆包
+
+## 遇到的问题
+
+1. 同一个机器上的`pod`可以正常通信
+2. 调度到不同机器上的`pod`无法正常通信
+
+原因：部署的集群不支持`vxlane`，需要换到`Calico`
 
 # 参考链接
 
