--- a/_posts/2024-08-09-BUG-K8S集群网络不通.md
+++ b/_posts/2024-08-09-BUG-K8S集群网络不通.md
@@ -93,7 +93,7 @@ outer_src_mac: A.ens33.mac; outer_dst_mac: B.ens33.mac
 
 原因：部署的集群不支持`vxlane`，需要换到`Calico`
 
-# 参考链接
+## 参考链接
 
 [K8S网络插件](https://blog.csdn.net/qq_57414752/article/details/130169668)
 
