--- a/_posts/2024-08-08-BUG-RAG权限排查.md
+++ b/_posts/2024-08-08-BUG-RAG权限排查.md
@@ -23,7 +23,7 @@ tags:
 
 ## 项目结构
 
-<img src="https://github.com/toanwang/toanwang.github.io/raw/master/img/image-20240808%E4%B8%8A%E5%8D%8890609708.png" alt="image-20240808上午90609708" style="zoom:50%;" />
+<img src="https://s2.loli.net/2024/08/10/BCcIeRUgdrlOHFS.png" alt="image-20240810上午85632439" style="zoom:50%;" />
 
 涉及到的业务模块主要是三个
 
@@ -57,7 +57,7 @@ tags:
 
 看公/私有云的权限差异：公有云只有个人账户，不涉及到组织架构、授权等操作
 
-<img src="https://github.com/toanwang/toanwang.github.io/raw/master/img/image-20240808上午94429088.png" alt="image-20240808上午94429088" style="zoom: 50%;" />
+<img src="https://s2.loli.net/2024/08/10/CuJ1VZklO3nFtAc.png" alt="image-20240810上午85711314" style="zoom:50%;" />
 
 一次简单的使用流程
 
