--- a/_posts/2024-08-15-ES写入学习.md
+++ b/_posts/2024-08-15-ES写入学习.md
@@ -21,6 +21,8 @@ tags:
 <img src="https://s2.loli.net/2024/08/15/Wjg27O8VNn9q4yb.png" alt="image-20240815下午35114995" style="zoom:50%;" />
 
 1. 数据先写`lucene` ，此时在内存中`memory buffer`，此处内存指的是内存缓冲区 `in-memory-buffer` 
+   1. 此时写入的就是`document`，进行分词之后形成倒排表，创建一个文档
+
 2. 写`Translog`，此文件在内存缓冲区  `file-system-cache`
 3. `refresh` 将数据从`in-memory-buffer` 写到 `file-system-cache`
    1. 基本是1s写一次，此时可以被检索，所以是非实时的查询（如果使用`id`查询，会查`translog`，又是实时的）
