ubuntu开发环境准备

--- a/_posts/2024-08-28-Ubuntu开发环境准备.md
+++ b/_posts/2024-08-28-Ubuntu开发环境准备.md
@@ -1,4 +1,14 @@
-
+---
+layout:     post
+title:      开发环境准备
+subtitle:   ubuntu开发环境
+date:       2024-08-28
+author:     toan
+catalog:	true
+tags:
+    - ubuntu
+    - tools
+---
 
 # 环境准备
 
@@ -81,13 +91,23 @@ Host github.toan
     User git
     IdentityFile ~/.ssh/id_rsa_toan
 
-Host githubx1
-    HostName github.com
+Host gitlab.***.com
+    HostName gitlab.***.com
     User git
-    IdentityFile ~/.ssh/id_rsa_x1
+    IdentityFile ~/.ssh/id_rsa_work
 ```
 
-* 举例子：`git clone git@github.toan:toanwang/toanwang.github.io.git`
+* 举例子：
+  * `git clone git@github.toan:toanwang/toanwang.github.io.git`
+  * `git clone -b master-1.0 git@gitlab.***.com:***.git`
+
+
+#### 设置用户信息
+
+前面步骤可以把代码拉取下来，但是提交代码还需要配置用户信息
+
+* 全局设置：`git config --global user.name ***`
+* 当前设置：`git config user.name ***`
 
 ## 语言
 
