ubuntu开发环境准备

--- a/_posts/2024-08-28-Ubuntu开发环境准备.md
+++ b/_posts/2024-08-28-Ubuntu开发环境准备.md
@@ -27,8 +27,8 @@ tags:
 Encoding=UTF-8
 Name=IntelliJ IDEA
 Comment=IntelliJ IDEA
-Exec=/home/wangzihao@eacon.com/Download/idea-IU-231.8109.175/bin/idea.sh
-Icon=/home/wangzihao@eacon.com/Download/idea-IU-231.8109.175/bin/idea.svg
+Exec=/home/***/Download/idea-IU-231.8109.175/bin/idea.sh
+Icon=/home/***Download/idea-IU-231.8109.175/bin/idea.svg
 Terminal=false
 Type=Application
 Categories=Application;Development;
