ubuntu开发环境准备

--- a/_posts/2024-08-28-Ubuntu开发环境准备.md
+++ b/_posts/2024-08-28-Ubuntu开发环境准备.md
@@ -10,15 +10,13 @@ tags:
     - tools
 ---
 
-# 环境准备
+### 工具下载
 
-## 工具下载
-
-### IDEA
+#### IDEA
 
 * 编辑器：`IDEA`，[ubuntu下IDEA破解](https://blog.lupf.cn/articles/2023/04/07/1680832924822.html)
 
-#### 添加桌面图标
+##### 添加桌面图标
 
 1. 新建`idea.desktop`文件，指定启动命令和图标
 
@@ -37,15 +35,15 @@ Categories=Application;Development;
 2. 设置启动权限：`sudo chmod +x goland.desktop`
 3. 复制到指定位置，可以在应用程序看到图标：`/usr/share/applications/`
 
-#### 新安装的程序图标不存在
+##### 新安装的程序图标不存在
 
 可能是写的`desktop`文件有问题，可以尝试刷新列表缓存`sudo update-desktop-database`
 
-### VScode
+#### VScode
 
-* 安装`python`插件即可
+* 用来写`python`，安装`python`插件即可
 
-### kubectl
+#### kubectl
 
 * 直接使用`apt install kubectl`安装失败，没解决
 * 安装二进制文件
@@ -54,7 +52,7 @@ Categories=Application;Development;
   * 移动目录：`sudo mv kubectl /usr/local/bin/`
   * 查看版本：`kubectl version --client`
 
-### docker
+#### docker
 
 * `curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -`
 * `sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"`
@@ -64,16 +62,16 @@ Categories=Application;Development;
 * 安装`docker`引擎：`sudo apt install -y docker-ce`
 * 查看版本：`docker --version`
 
-### git
+#### git
 
 已有`git`
 
-#### 设置私钥
+##### 设置私钥
 
 1. 生成密钥对：`ssh-keygen -t rsa -b 4096 -C "your_email@example.com"`
 2. 添加密钥到`github`：个人中心->`settings`->`SSH and GPG keys`
 
-#### 设置多个用户
+##### 设置多个用户
 
 [多用户设置](https://finisky.github.io/multiplegithubaccountsononemachine/)
 
@@ -102,25 +100,29 @@ Host gitlab.***.com
   * `git clone -b master-1.0 git@gitlab.***.com:***.git`
 
 
-#### 设置用户信息
+##### 设置用户信息
 
 前面步骤可以把代码拉取下来，但是提交代码还需要配置用户信息
 
 * 全局设置：`git config --global user.name ***`
 * 当前设置：`git config user.name ***`
 
-## 语言
+### 语言
 
-### Java
+#### Java
 
 * 命令行安装：`sudo apt-get install openjdk-8-jdk`
 * 查看版本：`java -version`
 
-### Python
+##### maven
+
+
+
+#### Python
 
 已有`python3`
 
-### Go
+#### Go
 
 * 下载压缩：`wget https://dl.google.com/go/go1.15.linux-amd64.tar.gz`
 * 解压：`sudo tar -C /usr/local -xzf go1.15.linux-amd64.tar.gz`
