ubuntu开发环境准备

--- a/_posts/2024-08-28-Ubuntu开发环境准备.md
+++ b/_posts/2024-08-28-Ubuntu开发环境准备.md
@@ -62,6 +62,27 @@ Categories=Application;Development;
 * 安装`docker`引擎：`sudo apt install -y docker-ce`
 * 查看版本：`docker --version`
 
+#### docker-compose
+
+* 安装：`sudo apt install docker-compose`
+* 启动容器：`docker-compose up`
+  * 自动在当前路径下寻找`docker_compose.yml/yaml`，下载镜像，启动容器
+* 终止：`docker-compose stop`
+* 重新启动：`docker-compose restart`
+
+#### 下载镜像报错
+
+* 基本是`io`报错和超时，因为国内墙了`docker hub`
+* 需要找一个替代的，`https://dockerhub.icu/`
+  * 修改配置：`/etc/docker/daemon.json`
+  * 重启`docker`：`service docker restart`
+
+```json
+{
+  "registry-mirrors": ["https://dockerhub.icu"]
+}
+```
+
 ### git
 
 已有`git`
@@ -107,6 +128,12 @@ Host gitlab.***.com
 * 全局设置：`git config --global user.name ***`
 * 当前设置：`git config user.name ***`
 
+### nacos
+
+[nacos下载-官网教程](https://nacos.io/zh-cn/docs/quick-start.html)
+
+* 最好直接使用`docker`启动
+
 ## 语言
 
 ### Java
@@ -114,7 +141,12 @@ Host gitlab.***.com
 * 命令行安装：`sudo apt-get install openjdk-8-jdk`
 * 查看版本：`java -version`
 
-#### maven
+#### maven使用
+
+1. 替换配置文件：`/user/share/maven/conf/settings`
+2. 更新编辑器配置：`IDEA`中设置新的`maven`信息，`file->setting->maven`，修改配置和仓库地址
+3. 重新加载依赖：`pom.xml->maven->reload_project`
+4. 如果项目飘红，需要重新构建项目，`build->rebuild_project`
 
 ### Python
 
@@ -127,3 +159,12 @@ Host gitlab.***.com
 * 设置环境变：`export PATH=$PATH:/usr/local/go/bin`
 * 生效配置：`source ~/.bashrc`
 * 检查版本：`go version`
+
+## Linux
+
+### 常用指令
+
+#### 网络
+
+* 查看端口占用：`ss -tuln | grep ***`
+* 查看占用端口的进程`id`：`fuser ***/tcp`
