--- a/_posts/2024-08-28-Ubuntu开发环境准备.md
+++ b/_posts/2024-08-28-Ubuntu开发环境准备.md
@@ -96,7 +96,7 @@ Categories=Application;Development;
 
 [多用户设置](https://finisky.github.io/multiplegithubaccountsononemachine/)
 
-* 上一步生成的密钥对文件分别为：`id_rsa` 和 `id_rsa.pub``
+* 上一步生成的密钥对文件分别为：`id_rsa` 和 `id_rsa.pub`
   * ``.pub`后缀是需要添加到`github`中的
 * 增加设置，为不同的仓库设置不同的秘钥
   * `Host`：主机别名，依靠这个区分不同的账户
