--- a/_posts/2024-09-12-MyBatis缓存.md
+++ b/_posts/2024-09-12-MyBatis缓存.md
@@ -12,6 +12,10 @@ tags:
 
 
 
+# 参考资料
+
+[美团技术MyBatis](https://tech.meituan.com/2018/01/19/mybatis-cache.html)
+
 # 问题背景
 
 新到公司接了一个小需求，需要给某个列表查询增加一个字段，同时看看能不能优化一下之前的代码
@@ -85,18 +89,27 @@ third_cost 25
 once_func_cost 232
 ```
 
+# 现象
+
+1. 第一个`sql`查询，同一个语句，重复查询三次，都打印了`sql` ，并且耗时接近
+   1. 十次结果中，后面九次时间都比较接近，说明还是有地方有优化
+
+2. 然后打印了不同代码块的耗时，发现还是`sql`耗时有变化，重新统计了另一个`sql`的耗时
+
+3. 第二个`sql`查询，第二次查询耗时明显降低，但是还是打印了`sql`
+
+其他信息
+
+3. 第二个`sql`是先于第一个执行的
+4. 项目使用的是`pgsql`
+
 # 小结
 
-1. 第一个sql查询，因为同一个session内连续查了三次，耗时都非常接近，并且后台都打印了sql语句，得到以下结论
-   1. 数据库和`MyBatis`没有缓存，因为同一个语句，重复查询三次，都打印了`sql` ，并且耗时接近
-   2. 十次结果中，后面九次时间都比较接近，说明还是有地方有优化
-
-2. 然后打印了不同代码块的耗时，发现还是sql耗时有变化，重新统计了另一个sql的耗时
-
-3. 第二个sql查询，第二次查询耗时明显降低，但是还是打印了sql
-
-# 问题
-
-1. 看起来是使用了Mybatis的一级缓存，但是一个session内，重复sql执行，都打印了sql，如果命中缓存，是不打印sql的
-2. 如果使用了MyBatis缓存，第二次执行的耗时应该是不会缩短的，因为缓存是当前session内有效的
+1. 项目使用的是`pgsql`，不支持强制使用结果缓存，肯定不是命中了数据库的查询缓存结果
+2. 同一个`sql` 执行多次，每次耗时相同，说明也没有用到`MyBatis`的一级缓存
+   1. 一级缓存是即时生效的
+   2. 并且每次都打印了`sql`，侧面印证没有用到一级缓存（这个不确定在哪里可以配置）
+   3. 在一个`sql`第二次执行之间，更新了当前数据（目的是为了使一级缓存失效），但是第二次耗时和之前类似，侧面印证没有用到一级缓存
+3. 对比数据发现，同一个`sql`内第二次执行耗时缩短约100毫秒。接口连续多次执行，第二耗时缩短也在100毫秒
+   1. 可以猜测是第一个建立连接会耗时
 
