--- a/_posts/2024-09-12-MyBatis缓存.md
+++ b/_posts/2024-09-12-MyBatis缓存.md
@@ -21,8 +21,8 @@ tags:
 新到公司接了一个小需求，需要给某个列表查询增加一个字段，同时看看能不能优化一下之前的代码
 
 1. 想到的最简单的优化手段，减少查表次数，按照任务id分组查出来所需的全部信息
-2. 改完之后接口耗时对比为 `227 : 174`
-3. 为了验证是不是偶现的提高，把这个接口循环执行了十次，改完的接口普遍会快一点，第十次结果对比为 `95.7 : 39.5`
+2. 改完之后接口耗时对比为 `227ms : 174ms`
+3. 为了验证是不是偶现的提高，把这个接口循环执行了十次，改完的接口普遍会快一点，第十次结果对比为 `95.7ms : 39.5ms`
 
 此时有个疑问，为什么接口耗时越来越少，评审时问了组长，他只说了句数据库有缓存，但是之前了解到的是`MySQL`是去掉了结果缓存。由于太久没写`Java`了，不确定是不是`MyBatis`框架也有类似的缓存，因为时间紧，就没继续问下去，后面有时间验证一下
 
@@ -30,7 +30,7 @@ tags:
 
 ## sql1查询耗时
 
-主要进行以下操作，结果如下
+此处是改过的`sql`，主要进行以下操作，结果如下
 
 1. 单个`sql`执行三次，记录耗时
 2. 接口执行十次，计算耗时
@@ -67,7 +67,7 @@ once_func_cost 31
 
 ## sql2查询耗时
 
-主要进行以下操作，结果如下
+接口中的另外一个`sql`，主要进行以下操作，结果如下
 
 1. 单个`sql`执行三次，记录耗时
 2. 接口执行十次，计算耗时
@@ -92,7 +92,6 @@ once_func_cost 232
 # 现象
 
 1. 第一个`sql`查询，同一个语句，重复查询三次，都打印了`sql` ，并且耗时接近
-   1. 十次结果中，后面九次时间都比较接近，说明还是有地方有优化
 
 2. 然后打印了不同代码块的耗时，发现还是`sql`耗时有变化，重新统计了另一个`sql`的耗时
 
@@ -100,16 +99,33 @@ once_func_cost 232
 
 其他信息
 
-3. 第二个`sql`是先于第一个执行的
-4. 项目使用的是`pgsql`
+4. 第二个`sql`是先于第一个执行的
+5. 项目使用的是`pgsql`
 
 # 小结
 
-1. 项目使用的是`pgsql`，不支持强制使用结果缓存，肯定不是命中了数据库的查询缓存结果
-2. 同一个`sql` 执行多次，每次耗时相同，说明也没有用到`MyBatis`的一级缓存
-   1. 一级缓存是即时生效的
-   2. 并且每次都打印了`sql`，侧面印证没有用到一级缓存（这个不确定在哪里可以配置）
-   3. 在一个`sql`第二次执行之间，更新了当前数据（目的是为了使一级缓存失效），但是第二次耗时和之前类似，侧面印证没有用到一级缓存
-3. 对比数据发现，同一个`sql`内第二次执行耗时缩短约100毫秒。接口连续多次执行，第二耗时缩短也在100毫秒
-   1. 可以猜测是第一个建立连接会耗时
+还没有最终确定结论，不过参考美团技术的博客以及`GPT`问到的信息，现有的理解如下：
 
+1. 对比耗时数据发现，同一个`sql`内第二次执行耗时缩短约100毫秒。接口连续多次执行，第二耗时缩短也在100毫秒，时间相近
+   1. 大概率是第一个查询建立连接需要点时间
+
+2. 项目使用的是`pgsql`，不支持强制使用查询结果缓存
+   1. 第二次查询变快不是命中了数据库的查询缓存结果
+   2. `pgsql`共享缓存，将频繁查询的数据放到了内存中，避免频繁`I/O`耗时
+
+3. 同一个`sql` 执行多次，每次耗时相同【猜测】
+   1. 可能是没有用到`MyBatis`的一级缓存，但是自己搜到的信息是，一级缓存是默认开启的，并且一级缓存是即时生效的
+   2. 并且每次都打印了`sql`，侧面印证没有用到一级缓存（这个不确定在哪里可以配置）
+   3. 在一个`sql`第二次执行之间，更新了当前数据（目的是为了使一级缓存失效），但是第二次耗时和之前（不对缓存做失效操作）类似，侧面印证没有用到一级缓存
+
+## 一些联想的问题
+
+1. 一级缓存类似对当前`sql`的查询结果起到了`MVCC`类似的效果，同一个`sqlsession`查询内，缓存不失效，查询到的结果一定是一样的
+   1. 缓存本质是`Map`结构存储的，`key`就是`sql`
+2. 一级缓存失效的情况
+   1. 进行了增删改操作
+   2. 强制删除了缓存
+3. `select ... for update` 是否会更新缓存？
+   1. `for update` 查询不会更新缓存，而是直接跳过缓存查库
+   2. 是否加`for update`，查询结果可能会有区别
+4. 二级缓存，和一级缓存的区别是作用范围不同，二级缓存时同一个`namespace`下的有效，默认关闭
