--- a/_posts/2024-09-19-Spring学习.md
+++ b/_posts/2024-09-19-Spring学习.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      Spring学习-1
+title:      Spring学习-IOC
 subtitle:   SpringBoot
 date:       2024-09-19
 author:     toan
@@ -25,7 +25,7 @@ tags:
 
 # IOC
 
-<img src="https://cdn.nlark.com/yuque/0/2024/png/1102741/1726712128583-d4a89506-435d-44be-9e1c-8111a6772165.png?x-oss-process=image%2Fformat%2Cwebp" alt="image.png" style="zoom:50%;" />
+<img src="https://cdn.nlark.com/yuque/0/2024/png/1102741/1726712128583-d4a89506-435d-44be-9e1c-8111a6772165.png?x-oss-process=image%2Fformat%2Cwebp" alt="image.png" style="zoom:50%;" referrerpolicy="no-referrer"/>
 
 ## 大概流程
 
