--- a/_posts/2024-09-28-redis+lua.md
+++ b/_posts/2024-09-28-redis+lua.md
@@ -32,14 +32,14 @@ tags:
 1. `connection.eval()` 注意这个函数里面的五个参数，其中第二个是返回类型，`gpt`一开始给的写法是`RedisScript.ReturnType.MULTI`，但是本地的`RedisScript`没有`ReturnType`属性，改了半天，后面发现直接用`ReturnType`就行
 2. 因为需要计算过期时间，所以需要做时间戳转换，但是`Lua`不支持`os`处理日期的操作，所以手动写了一个简单的，也不太准确
 3. `lua`不能调试，基本靠把中间结果写到返回值里面来调试
-4. `lua`返回的不是个字符串，是一个`ASCII`数组，这块搞了一个多小时
-   1. 一开始因为`eval`传入的是一个`bytes`，任务在`lua`里面需要先做一次转字符串的操作，但是函数写完之后提示入参是`string`，说明在`lua`里面，参数是字符串格式
+4. 开始打印输出的结果，全部都是数组，因为`lua`返回的不是字符串，会变成`ASCII`数组，这块搞了一个多小时
+   1. 一开始因为`eval`传入的是一个`bytes`，认为在`lua`里面需要先做一次转字符串的操作，但是函数写完之后提示入参是`string`，说明在`lua`里面，传参是`bytes`，但是在`lua`里面，参数已经转成了字符串格式
    2. 打印输出的日期，发现`2014`对应的是`[50,48,49,52]`，就是`ASCII`的对应关系，所以拿到结果后需要做一个转换，才能得到字符串
-5. 一开始`gpt`给的处理代码是`for field, timeStr in pairs(redis.call('HGETALL', hashKey)) do`，来获取所有的`field`和`value`
-   1. 这样在做时间戳转换的时候，结果一直有数据是`nil`，基本是间隔出现，后面打印每次的`timeStr`，会有`field`数据出来，这个肯定是转不成时间
+5. 拿到`hash`所有的数据。一开始`gpt`给的处理代码是`for field, timeStr in pairs(redis.call('HGETALL', hashKey)) do`，来获取所有的`field`和`value`
+   1. 这样在做时间戳转换的时候，一直有数据是`nil`，基本是间隔出现，后面打印每次的`timeStr`，会有`field`数据出来，这个肯定是转不成时间
    2. 因为`redis.call('HGETALL', hashKey) `，这个太坑了，这个返回的是一个数组，`field`和`value`间隔输出
    3. 这里面`iparis` 作用和`python`里面的`enumerate`很类似，前面的是下标，后面的是值
-   4. 后面改成代码里面的，间隔访问，就可以正常获取到值
+   4. 后面改成代码里面的方法，间隔访问，就可以正常获取到值
 6. 当把`hash`中的`field`全部删除之后，`key`也被删除了，这是正常的。 [`redis Hdel` 删除最后一个元素时，整个key会被一起删除吗？](https://blog.csdn.net/qfzhangwei/article/details/130133465)
 
 ### 代码
