--- a/_posts/2024-10-10-分布式事务.md
+++ b/_posts/2024-10-10-分布式事务.md
@@ -29,7 +29,9 @@ tags:
 
 [支付宝-两阶段提交](https://antdigital.com/docs/11/132929)
 
-<img src="../../../.config/Typora/typora-user-images/image-20241010212316778.png" alt="image-20241010212316778" style="zoom: 50%;" />
+<img src="https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/2938582161/p231073.png" alt="2PC" style="zoom:50%;" />
+
+
 
 1. 一阶段：协调者询问所有参与者，是否为`ready`状态【可以执行事务】
 2. 二阶段：如果可以执行，全部提交事务；如果不可以，全部回滚
@@ -50,7 +52,7 @@ tags:
 
 ### 本地消息表
 
-<img src="../../../.config/Typora/typora-user-images/image-20241010170221688.png" alt="image-20241010170221688" style="zoom: 50%;" />
+<img src="https://xiaomi-info.github.io/2020/01/02/distributed-transaction/native-message.jpg" alt="img" style="zoom:50%;" />
 
 本地消息表的示意图
 
@@ -63,7 +65,7 @@ tags:
 
 ### 可靠消息最终一致性
 
-<img src="../../../.config/Typora/typora-user-images/image-20241010213942642.png" alt="image-20241010213942642" style="zoom:50%;" />
+<img src="https://xiaomi-info.github.io/2020/01/02/distributed-transaction/mq-message.jpg" alt="img" style="zoom:50%;" />
 
 主要分为以下步骤
 
